--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8"/>
+<!-- saved from url=(0022)http://oneniceapp.com/ -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta charset="utf-8">
         <meta name="keywords" content="潮流,街头,流行,时尚,球鞋,牛仔裤,时尚杂志,街头文化,潮流品牌,晒物">
         <meta name="description" content="nice以“今天你穿什么”为核心功能，注重分享与纪录你的真实穿着体验">
-        <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="/script/dest/css/pc/index.min.css"/>
+        <link rel="shortcut icon" href="http://oneniceapp.com/img/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="http://oneniceapp.com/script/dest/css/pc/index.min.css">
         <title>nice</title>
         <script>
             var ua = navigator.userAgent.toLowerCase();
@@ -25,50 +24,50 @@
     <body>
         <div class="header-wrapper">
             <div class="header">
-                <a href="/" title="nice" class="logo"><img src="/script/dest/image/pc/nice_logo.png" width="82" height="31" alt="nice"/></a>
+                <a href="./nice_files/nice.html" title="nice" class="logo"><img src="./nice_files/nice_logo.png" width="82" height="31" alt="nice"></a>
                 <ul class="nav">
-                    <li><a href="/">首页</a></li>
-                    <li><a href="/about">关于nice</a></li>
-                    <li><a href="/contact">联系nice</a></li>
-                    <li><a href="/joinus">加入nice</a></li>
+                    <li><a href="./nice_files/nice.html">首页</a></li>
+                    <li><a href="http://oneniceapp.com/about">关于nice</a></li>
+                    <li><a href="http://oneniceapp.com/contact">联系nice</a></li>
+                    <li><a href="http://oneniceapp.com/joinus">加入nice</a></li>
                 </ul>
                 <div class="download">
-                    <a href="http://www.oneniceapp.com/download/app/ios" target="_blank"><img src="/script/dest/image/pc/ios.png" width="176" height="52" alt="ios下载"/></a>
-                    <a href="http://img01.oneniceapp.com/app/nice_main_2.3.1.1.apk"><img src="/script/dest/image/pc/android.png" width="180" height="52" alt="android下载"/></a>
+                    <a href="http://www.oneniceapp.com/download/app/ios" target="_blank"><img src="./nice_files/ios.png" width="176" height="52" alt="ios下载"></a>
+                    <a href="http://img01.oneniceapp.com/app/nice_main_2.3.1.1.apk"><img src="./nice_files/android.png" width="180" height="52" alt="android下载"></a>
                 </div>
             </div>
         </div>
         <div class="main">
-           <img src="/script/dest/image/pc/text1.png" width="358" height="29" alt="在nice,想说的都在照片上" class="text1">
+           <img src="./nice_files/text1.png" width="358" height="29" alt="在nice,想说的都在照片上" class="text1">
            <div class="photo-list">
-                <img src="/script/dest/image/pc/photo1.png" class="first" width="261" height="296" alt="给照片上打标签照片也能讲故事"/>
-                <img src="/script/dest/image/pc/photo2.png" width="230" height="296" alt="为照片选款贴纸秀出你的潮态度"/>
-                <img src="/script/dest/image/pc/photo3.png" class="third" width="256" height="296" alt="独特的私聊功能生人迅速有的聊"/>
+                <img src="./nice_files/photo1.png" class="first" width="261" height="296" alt="给照片上打标签照片也能讲故事">
+                <img src="./nice_files/photo2.png" width="230" height="296" alt="为照片选款贴纸秀出你的潮态度">
+                <img src="./nice_files/photo3.png" class="third" width="256" height="296" alt="独特的私聊功能生人迅速有的聊">
            </div>
-            <img src="/script/dest/image/pc/text2.png" width="599" height="29" alt="在nice,你可以结识跟你有相同生活方式的人" class="text2">
+            <img src="./nice_files/text2.png" width="599" height="29" alt="在nice,你可以结识跟你有相同生活方式的人" class="text2">
             <div class="users">
-                <img src="/script/dest/image/pc/tag1.png" width="120" height="26" alt="nice" class="tag1"/>
-                <img src="/script/dest/image/pc/tag2.png" width="125" height="36" alt="nice" class="tag2"/>
-                <img src="/script/dest/image/pc/tag3.png" width="75" height="24" alt="nice" class="tag3"/>
-                <img src="/script/dest/image/pc/tag4.png" width="110" height="40" alt="nice" class="tag4"/>
-                <img src="/script/dest/image/pc/tag5.png" width="122" height="33" alt="nice" class="tag5"/>
-                <img src="/script/dest/image/pc/tag6.png" width="105" height="25" alt="nice" class="tag6"/>
-                <img src="/script/dest/image/pc/users.png" width="782" height="526" alt="nice"/>
+                <img src="./nice_files/tag1.png" width="120" height="26" alt="nice" class="tag1">
+                <img src="./nice_files/tag2.png" width="125" height="36" alt="nice" class="tag2">
+                <img src="./nice_files/tag3.png" width="75" height="24" alt="nice" class="tag3">
+                <img src="./nice_files/tag4.png" width="110" height="40" alt="nice" class="tag4">
+                <img src="./nice_files/tag5.png" width="122" height="33" alt="nice" class="tag5">
+                <img src="./nice_files/tag6.png" width="105" height="25" alt="nice" class="tag6">
+                <img src="./nice_files/users.png" width="782" height="526" alt="nice">
             </div>
-            <img src="/script/dest/image/pc/text3.png" width="378" height="29" alt="立即下载，标记你的nice生活" class="text3">
+            <img src="./nice_files/text3.png" width="378" height="29" alt="立即下载，标记你的nice生活" class="text3">
             <div class="download">
-                <a href="http://www.oneniceapp.com/download/app/ios" title="ios" target="_blank"><img class="ios-download-bg" src="/script/dest/image/pc/ios_download_normal.png" width="210" height="210" alt="ios download"></a>
-                <a href="http://img01.oneniceapp.com/app/nice_main_2.3.1.1.apk" title="android"><img class="android-download-bg" src="/script/dest/image/pc/android_download_normal.png" width="210" height="210" alt="android download"></a>
-                <img src="/script/dest/image/pc/qr_code.png" alt="二维码下载" width="210" height="210"/>
+                <a href="http://www.oneniceapp.com/download/app/ios" title="ios" target="_blank"><img class="ios-download-bg" src="./nice_files/ios_download_normal.png" width="210" height="210" alt="ios download"></a>
+                <a href="http://img01.oneniceapp.com/app/nice_main_2.3.1.1.apk" title="android"><img class="android-download-bg" src="./nice_files/android_download_normal.png" width="210" height="210" alt="android download"></a>
+                <img src="./nice_files/qr_code.png" alt="二维码下载" width="210" height="210">
             </div>
         </div>
         <div class="footer-wrapper">
     <div class="footer">
         <ul class="nav">
-            <li class="first"><a href="/about">关于nice</a></li>
-            <li><a href="/contact">联系nice</a></li>
-            <li><a href="/joinus">加入nice</a></li>
-            <li class="forth"><a href="/partner">合作伙伴</a></li>
+            <li class="first"><a href="http://oneniceapp.com/about">关于nice</a></li>
+            <li><a href="http://oneniceapp.com/contact">联系nice</a></li>
+            <li><a href="http://oneniceapp.com/joinus">加入nice</a></li>
+            <li class="forth"><a href="http://oneniceapp.com/partner">合作伙伴</a></li>
         </ul>
         <p>www.oneniceapp.com 2011-2014 © All Rights Reserved</p>
         <p>京公网安备：11010502015324 京ICP备11036675号-2 经营许可证编号：京ICP证120107号</p>
@@ -79,9 +78,10 @@
             <script type="text/javascript">
             var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
             document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F0a615c950ee719977112f4bc5166ea0c' type='text/javascript'%3E%3C/script%3E"));
-            </script>
+            </script><script src="./nice_files/h.js" type="text/javascript"></script>
         </div>
-    </body>
-    <script src="/script/dest/js/jquery-1.11.1.min.js"></script>
-    <script src="/script/dest/js/pc/index.js"></script>
-</html>
+    
+    <script src="./nice_files/jquery-1.11.1.min.js"></script>
+    <script src="./nice_files/index.js"></script>
+
+</body></html>
