test for http file vs local css file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="keywords" content="潮流,街头,流行,时尚,球鞋,牛仔裤,时尚杂志,街头文化,潮流品牌,晒物">
         <meta name="description" content="nice以“今天你穿什么”为核心功能，注重分享与纪录你的真实穿着体验">
         <link rel="shortcut icon" href="http://oneniceapp.com/img/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="http://oneniceapp.com/script/dest/css/pc/index.min.css">
+        <link rel="stylesheet" href="index_files/index.min.css">
         <title>nice</title>
         <script>
             var ua = navigator.userAgent.toLowerCase();
