--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<!-- saved from url=(0022)http://oneniceapp.com/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
         <meta name="keywords" content="潮流,街头,流行,时尚,球鞋,牛仔裤,时尚杂志,街头文化,潮流品牌,晒物">
         <meta name="description" content="nice以“今天你穿什么”为核心功能，注重分享与纪录你的真实穿着体验">
         <link rel="shortcut icon" href="http://oneniceapp.com/img/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="index_files/index.min.css">
-        <title>nice</title>
-        <script>
+        <title>PrivaFit</title>
+        <script
             var ua = navigator.userAgent.toLowerCase();
             if(ua.indexOf("android") > -1
             || ua.indexOf("iphone") > -1
@@ -24,12 +23,12 @@
     <body>
         <div class="header-wrapper">
             <div class="header">
-                <a href="./index_files/index.html" title="nice" class="logo"><img src="./index_files/nice_logo.png" width="82" height="31" alt="nice"></a>
+                <a href="./index_files/index.html" title="privafit" class="logo"><img src="./index_files/logo.png" width="164" height="62" alt="PrivaFit"></a>
                 <ul class="nav">
                     <li><a href="./index_files/index.html">首页</a></li>
-                    <li><a href="http://oneniceapp.com/about">关于nice</a></li>
-                    <li><a href="http://oneniceapp.com/contact">联系nice</a></li>
-                    <li><a href="http://oneniceapp.com/joinus">加入nice</a></li>
+                    <li><a href="http://www.privafit.com/about">关于PrivaFit</a></li>
+                    <li><a href="http://www.privafit.com/contact">联系PrivaFit</a></li>
+                    <li><a href="http://www.privafit.com/joinus">加入PrivaFit</a></li>
                 </ul>
                 <div class="download">
                     <a href="http://www.oneniceapp.com/download/app/ios" target="_blank"><img src="./index_files/ios.png" width="176" height="52" alt="ios下载"></a>
@@ -38,39 +37,17 @@
             </div>
         </div>
         <div class="main">
-           <img src="./index_files/text1.png" width="358" height="29" alt="在nice,想说的都在照片上" class="text1">
-           <div class="photo-list">
-                <img src="./index_files/photo1.png" class="first" width="261" height="296" alt="给照片上打标签照片也能讲故事">
-                <img src="./index_files/photo2.png" width="230" height="296" alt="为照片选款贴纸秀出你的潮态度">
-                <img src="./index_files/photo3.png" class="third" width="256" height="296" alt="独特的私聊功能生人迅速有的聊">
-           </div>
-            <img src="./index_files/text2.png" width="599" height="29" alt="在nice,你可以结识跟你有相同生活方式的人" class="text2">
-            <div class="users">
-                <img src="./index_files/tag1.png" width="120" height="26" alt="nice" class="tag1">
-                <img src="./index_files/tag2.png" width="125" height="36" alt="nice" class="tag2">
-                <img src="./index_files/tag3.png" width="75" height="24" alt="nice" class="tag3">
-                <img src="./index_files/tag4.png" width="110" height="40" alt="nice" class="tag4">
-                <img src="./index_files/tag5.png" width="122" height="33" alt="nice" class="tag5">
-                <img src="./index_files/tag6.png" width="105" height="25" alt="nice" class="tag6">
-                <img src="./index_files/users.png" width="782" height="526" alt="nice">
-            </div>
-            <img src="./index_files/text3.png" width="378" height="29" alt="立即下载，标记你的nice生活" class="text3">
-            <div class="download">
-                <a href="http://www.oneniceapp.com/download/app/ios" title="ios" target="_blank"><img class="ios-download-bg" src="./index_files/ios_download_normal.png" width="210" height="210" alt="ios download"></a>
-                <a href="http://img01.oneniceapp.com/app/nice_main_2.3.1.1.apk" title="android"><img class="android-download-bg" src="./index_files/android_download_normal.png" width="210" height="210" alt="android download"></a>
-                <img src="./index_files/qr_code.png" alt="二维码下载" width="210" height="210">
-            </div>
         </div>
         <div class="footer-wrapper">
     <div class="footer">
         <ul class="nav">
-            <li class="first"><a href="http://oneniceapp.com/about">关于nice</a></li>
-            <li><a href="http://oneniceapp.com/contact">联系nice</a></li>
-            <li><a href="http://oneniceapp.com/joinus">加入nice</a></li>
-            <li class="forth"><a href="http://oneniceapp.com/partner">合作伙伴</a></li>
+            <li class="first"><a href="http://www.privafit.com/about">关于PrivaFit</a></li>
+            <li><a href="http://www.privafit.com/contact">联系PrivaFit</a></li>
+            <li><a href="http://www.privafit.com/joinus">加入PrivaFit</a></li>
+            <li class="forth"><a href="http://www.privafit.com/partner">合作伙伴</a></li>
         </ul>
-        <p>www.oneniceapp.com 2011-2014 © All Rights Reserved</p>
-        <p>京公网安备：11010502015324 京ICP备11036675号-2 经营许可证编号：京ICP证120107号</p>
+        <p>www.privafit.com 2014-2019 © All Rights Reserved</p>
+        <p>备案经营许可？</p>
     </div>
 </div>
 
