--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
         </div>
         <div>
             <div class="main" id="mainContent"> 
-                <p>在Privafit
-                每个人都越来越美丽，越来越自信，越来越健康
-                给自己一个机会，找到和你一起进步的伙伴！
-                最不一样的美女app，你的私人健身闺蜜
-                Trust us－
-                We know what you want
-                We build what you need
-                </p>
+                <h4>在Privafit</h4>
+                <p></br></p>
+                <div class="innerContent">
+                    <p>每个人都越来越美丽，越来越自信，越来越健康</p>
+                    <p>给自己一个机会，找到和你一起进步的伙伴！</p>
+                    <p>最不一样的美女app，你的私人健身闺蜜</p>
+                    <p>Trust us－</p>
+                    <p>We know what you want</p>
+                    <p>We build what you need</p>
+                </div>
             </div>
         </div>    
         <div class="footer-wrapper">
