--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
         <script src="index_files/jquery-1.11.1.min.js"> </script>
         <script src='index_files/index.js'></script>    
         <link rel="stylesheet" href="index_files/index.min.css">
-        <link href="http://nonty.net/item/font/setofont.php" rel='stylesheet' type='text/css'/>
         <link href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css' />
         <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css' />
+        <link rel="shortcut icon" href="index_files/actual-heart.ico">
         <title>PrivaFit</title>
     </head>
     <body>
         <div class="header-wrapper" id="home">
             <div class="header">
-                <a href="" title="privafit" class="logo"><img src="./index_files/logo.png" width="164" height="62" alt="PrivaFit"></a>
+                <a href="" title="privafit" class="logo"><img height="60" src='./index_files/gray-heart.png'><img src="./index_files/logo.png" width="164" height="62" alt="PrivaFit"></a>
                 <ul class="nav">
                     <li><a href="" id='homeLink'>首页</a></li>
                     <li><a href="" id='functionLink'>功能介绍</a></li>
